2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.cc:
	  Preparations for lospre.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-gbz80.def:
	  Jump optimization.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Non-destructive & with bit literal.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/peeph.def:
	  Improve elimination of branches.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.
	* src/z80/gen.c:
	  More verbose debugging for variables that are not in registers, but should be.

2012-05-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: added r3ka and s08 to installer
	* support/sdbinutils/binutils/configure.in,
	* support/sdbinutils/binutils/configure: fix bug #3527589
	* src/SDCCcse.c (newCseDef): fix bug #3528899

2012-05-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.

2012-05-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Preparations for further pointer offset
	   optimizations

2012-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/peeph.def:
	  Allow disabling of tail-call and jump to return optimization.

2012-05-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed inconsistent offsets for 16-bit register
	  accesses. Removed broken and unused AOP_STR type. Prohibit loading
	  h via hx from volatile operands.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>
